// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[STORE] - Price reducer Should return the default state to meta map 1`] = `
Object {
  "code": "_EventCurrencyCode",
  "cost": "_EventCost",
  "position": "_EventCurrencyPosition",
  "symbol": "_EventCurrencySymbol",
}
`;

exports[`[STORE] - Price reducer Should set the cost 1`] = `
Object {
  "code": "USD",
  "cost": 10,
  "position": "prefix",
  "symbol": "$",
}
`;

exports[`[STORE] - Price reducer Should set the cost code 1`] = `
Object {
  "code": "EUR",
  "cost": "",
  "position": "prefix",
  "symbol": "$",
}
`;

exports[`[STORE] - Price reducer Should set the cost symbol 1`] = `
Object {
  "code": "USD",
  "cost": "",
  "position": "prefix",
  "symbol": "€",
}
`;

exports[`[STORE] - Price reducer Should set the initial state 1`] = `
Object {
  "code": "EUR",
  "cost": "15",
  "position": "prefix",
  "symbol": "€",
}
`;

exports[`[STORE] - Price reducer Should set the symbol position 1`] = `
Object {
  "code": "USD",
  "cost": "",
  "position": "prefix",
  "symbol": "$",
}
`;
